--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -1,19 +1,35 @@
-FROM python:3.9-slim
+FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
-COPY deployment/api/requirements.txt .
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements file
+COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY deployment/api/ ./api/
+# Copy project files
+COPY notebooks/ ./notebooks/
+COPY Dataset/ ./Dataset/
+COPY data/ ./data/
 COPY models/ ./models/
-COPY src/ ./src/
+COPY src/ ./src/ 2>/dev/null || true
 
-# Expose port
-EXPOSE 8000
+# Expose Jupyter port
+EXPOSE 8888
 
-# Run the application
-CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
+# Set Jupyter configuration
+RUN jupyter notebook --generate-config && \
+    echo "c.NotebookApp.ip = '0.0.0.0'" >> ~/.jupyter/jupyter_notebook_config.py && \
+    echo "c.NotebookApp.open_browser = False" >> ~/.jupyter/jupyter_notebook_config.py && \
+    echo "c.NotebookApp.allow_root = True" >> ~/.jupyter/jupyter_notebook_config.py
+
+# Start Jupyter
+CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--allow-root"]
 
