--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,20 @@
-# Core dependencies
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.2
+# Core data science libraries
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
 
-# Data preprocessing
-imbalanced-learn==0.11.0
+# Imbalanced learning
+imbalanced-learn>=0.11.0
 
-# Jupyter notebooks
-jupyter==1.0.0
-ipykernel==6.25.2
-matplotlib==3.7.2
-seaborn==0.12.2
+# Jupyter
+jupyter>=1.0.0
+jupyterlab>=4.0.0
+ipykernel>=6.25.0
 
-# Testing
-pytest==7.4.3
-pytest-cov==4.1.0
+# Visualization
+matplotlib>=3.7.0
+seaborn>=0.12.0
 
-# Code quality
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.0
-
-# API (also in deployment/api/requirements.txt)
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
+# Optional but useful
+scipy>=1.10.0
 
